--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-icons/material-icons": "^25.1.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.1",
+    "ngx-bar-rating": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
